--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,6 @@ body {
     position: fixed;
     overflow-y: scroll;
     top: 0; right: 0; bottom: 0; left: 0;
-    /*transform: translateX(-50%);*/
     width: 100%;
     height: 100%;
     display:inline;
@@ -237,4 +236,9 @@ a#skoc {
 
 .validationMsg {
     background-color: red;
+}
+
+.info img {
+    width: 325px;
+    height: 443px;
 }
